- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
******* 0.00.29 (22088)
6/6/08 - ensure that ice thickness algorithm is only used between headwall and terminus, otherwise it hangs the sim
6/6/08 - compute a closer approximation of where the ELA intersects the ice surface
6/6/08 - compute ice thickness on demand instead of trying to interpolate between pre-computed samples
6/6/08 - when climate changes, compute several constants used in ice thickness model, reuse them elsewhere
6/6/08 - compute terminus location more accurately
6/6/08 - improve precision of ice visualization, drawing of the terminus and ELA contour where slightly off
******* 0.00.28 (22031)
6/5/08 - hide ELAValueNode
6/5/08 - change layout of View control panel to reduce its height, making more room for zoomed view
6/5/08 - bugfix: flags above the terminus can get created directly on the valley floor and then don't move
6/5/08 - bugfix: debris gets created directly on valley floor and never moves
6/5/08 - generate debris in entire cross-section, not just above ELA
6/5/08 - bugfix: disable dragging of borehole drill while its "fire" button is pressed
6/5/08 - hide trash can, put tools away by dragging them back to tool box
6/5/08 - create TrashCanDelegate, handles specifics of trashing tools independent of the node that represents the trash
6/5/08 - rename "Basic" tab to "Intro"
6/4/08 - bugfix: if ELA gets above headwall, Glacier q_advance_limit causes quasi-ELA to evolve in wrong direction forever
******* 0.00.27 (21967)
6/3/08 - add empty modules for Advanced and Climate Experiments, so we see the tabs
6/3/08 - revised ice thickness model to match model.txt